# vgu_htb

./: README.md
1_cowsay/host/: docker-compose.yml
2_baby_ovf/host/: Dockerfile  Makefile  docker-compose.yml
3_stack_ovf/: README.md
3_stack_ovf/host/: Dockerfile
3_stack_ovf/tools/: stack_exploit.py
4_heap_ovf/host/: docker-compose.yml
4_heap_ovf/tools/: heap_exploit.py
5_ret2lib/: README.md
5_ret2lib/host/: Dockerfile
5_ret2lib/tools/: combined_payload  pwn_r2l.py  py_gen_input.txt
6_real_case/dlt_vuln/: CMakeLists.txt
babyovf/: README.md  baby_overflow  baby_overflow.c  compile.sh
babyovf/host/: baby_overflow.c  entrypoint.sh
cowsay/: cowsay_ctf.sh
cowsay/host/: Dockerfile  docker-compose.xml  docker-compose.yml
heap_ovf/: README.md  exploit.py  heap_exploit.py
heap_ovf/host/: Dockerfile  Makefile  docker-compose.yml  heap_ovf  hidden_shell_2.c
heap_ovf/tools/: heap_exploit.py  py_gen_input.txt
ret2lib/: pwn_r2l.py  vanished_shell  vanished_shell.sh
ret2lib/host/: Dockerfile  Makefile  docker-compose.yml  pwn_r2l.py  vanished_shell  vanished_shell.c
ret2lib/tools/: pwn_r2l.py
stack_ovf/: README.md  input  pwn_ovf.py  py_gen_input.txt  stack_ovf
stack_ovf/host/: Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  hidden_shell.c  stack_ovf  stack_ovf.c
stack_ovf/tools/: py_gen_input.txt  stack_exploit.py
vgu_h4ck2on3/1_cowsay/: README.md
vgu_h4ck2on3/1_cowsay/host/: cowsay.py
vgu_h4ck2on3/3_stack_ovf/host/: Makefile  docker-compose.yml
vgu_h4ck2on3/5_ret2lib/host/: Makefile
vgu_h4ck2on3/6_real_case/: .gitmodules
(+15 files in other folders)
